# youtube-comment-analyzer

./: .gitignore  Makefile  README.md  dvc.yaml  experiment_info.json  params.yaml  pyproject.toml  requirements-dev.txt
.dvc/: config
.github/workflows/: cicd.yaml
docs/: mkdocs.yml
docs/docs/: index.md
flask_app/: app.py
mlruns/0/: meta.yaml
mlruns/0/1e43afdcbf9141a295e1df4c364e6595/: meta.yaml
mlruns/311783338219898414/: meta.yaml
mlruns/365000238214812840/: meta.yaml
mlruns/369614532225376129/: meta.yaml
mlruns/378863949864941315/: meta.yaml
mlruns/451256770844521053/: meta.yaml
mlruns/474674459218124094/: meta.yaml
mlruns/602507174562575349/: meta.yaml
mlruns/648986100559982393/: meta.yaml
mlruns/870855028939688209/: meta.yaml
notebooks/: custom_features.ipynb  exp2-bow-vs-tfidf.ipynb  exp3-tfidf(1,2)_max_features.ipynb  exp3-tfidf(1,3)_max_features.ipynb  exp4-handling-imbalanced-data.ipynb  exp5-knn-with-hpt.ipynb  exp5-lightgbm-with-hpt.ipynb  exp5-log-reg-with-hpt.ipynb  exp5-naivebayes-with-hpt.ipynb  exp5-randomforest-with-hpt.ipynb  exp5-svm-with-hpt.ipynb  exp5-xgboost-with-hpt.ipynb  experiment_1_baseline_model.ipynb  first_baseline_model.ipynb  lightGBM_final.ipynb  sentiment-analysis-bert-reddit-data.ipynb  stacking.ipynb  test.ipynb
scripts/: mlflow_test.py
src/: __init__.py  dataset.py  features.py  plots.py
src/data/: data_ingestion.py  data_preprocessing.py
src/model/: model_building.py  model_evaluation.py  register_model.py
src/modeling/: predict.py  train.py
(+4596 files in other folders)
